syntax = "proto2";

package Gazillion;

enum ModifyCircleOperation {
	eMCO_Add	= 1;
	eMCO_Remove	= 2;
}

enum GlobalTuningVar {
	eGTV_VendorBuyPrice	= 0;
	eGTV_VendorSellPrice	= 1;
	eGTV_VendorXPGain	= 2;
	eGTV_PVPEnabled	= 3;
	eGTV_XPGain	= 4;
	eGTV_LootDropRate	= 5;
	eGTV_LootSpecialDropRate	= 6;
	eGTV_LootRarity	= 7;
	eGTV_PartyXPBonusPct	= 8;
	eGTV_PlayerTradeEnabled	= 9;
	eGTV_NumGlobalTuningVars	= 10;
}

enum AreaTuningVar {
	eATV_AreaMobSpawnHeat	= 0;
	eATV_AreaMobSpawnHeatReturn	= 1;
	eATV_NumAreaTuningVars	= 2;
}

enum WorldEntityTuningVar {
	eWETV_MobPowerDamage	= 0;
	eWETV_MobHealth	= 1;
	eWETV_MobXP	= 2;
	eWETV_MobDropRate	= 3;
	eWETV_MobSpecialDropRate	= 4;
	eWETV_Enabled	= 5;
	eWETV_MobDropRarity	= 6;
	eWETV_NumWorldEntityTuningVars	= 7;
}

enum PopObjTuningVar {
	ePOTV_PopulationObjectWeight	= 0;
	ePOTV_NumPopulationObjectTuningVars	= 1;
}

enum PowerTuningVar {
	ePTV_PowerCost	= 0;
	ePTV_PowerDamagePVE	= 1;
	ePTV_PowerDamagePVP	= 2;
	ePTV_PowerEnabled	= 3;
	ePTV_NumPowerTuningVars	= 4;
}

enum RegionTuningVar {
	eRTV_PlayerLimit	= 0;
	eRTV_Enabled	= 1;
	eRTV_NumRegionTuningVars	= 2;
}

enum LootTableTuningVar {
	eLTTV_Enabled	= 0;
	eLTTV_Weight	= 1;
	eLTTV_Rolls	= 2;
	eLTTV_NumLootTableTuningVars	= 3;
}

enum MissionTuningVar {
	eMTV_Enabled	= 0;
	eMTV_NumMissionTuningVars	= 1;
}

enum RegionRequestQueueUpdateVar {
	eRRQ_Invalid	= 1;
	eRRQ_SelectQueueMethod	= 2;
	eRRQ_RemovedFromGroup	= 3;
	eRRQ_RaidNotAllowed	= 4;
	eRRQ_GroupInvitePending	= 5;
	eRRQ_GroupInviteAccepted	= 6;
	eRRQ_GroupInviteDeclined	= 7;
	eRRQ_GroupInviteExpired	= 8;
	eRRQ_WaitingInQueue	= 9;
	eRRQ_WaitingInWaitlist	= 10;
	eRRQ_WaitingInWaitlistLocked	= 11;
	eRRQ_MatchInvitePending	= 12;
	eRRQ_MatchInviteAccepted	= 13;
	eRRQ_MatchInviteDeclined	= 14;
	eRRQ_MatchInviteExpired	= 15;
	eRRQ_InMatch	= 16;
}

enum RegionRequestQueueCommandVar {
	eRRQC_AddToQueueSolo	= 1;
	eRRQC_AddToQueueParty	= 2;
	eRRQC_AddToQueueBypass	= 3;
	eRRQC_GroupInviteAccept	= 4;
	eRRQC_GroupInviteDecline	= 5;
	eRRQC_RemoveFromQueue	= 6;
	eRRQC_MatchInviteAccept	= 7;
	eRRQC_MatchInviteDecline	= 8;
	eRRQC_DebugForceStart	= 9;
	eRRQC_DebugInfo	= 10;
	eRRQC_RequestToJoinGroup	= 11;
}

enum RegionPlayerAccessVar {
	eRPA_Invalid	= 0;
	eRPA_Open	= 1;
	eRPA_InviteOnly	= 2;
	eRPA_Locked	= 3;
	eRPA_Closed	= 4;
}

enum RegionTransferFailure {
	eRTF_GenericError	= 0;
	eRTF_CreationProhibitedByGame	= 1;
	eRTF_Full	= 2;
	eRTF_PartiesNotAllowed	= 3;
	eRTF_RaidsNotAllowed	= 4;
	eRTF_TargetPlayerUnavailable	= 5;
	eRTF_BodyslideRegionUnavailable	= 6;
	eRTF_DestinationInaccessible	= 7;
	eRTF_PlayerNotInDifficulty	= 8;
	eRTF_MatchNoTeleportToPlayer	= 9;
	eRTF_MatchNoTeleportToParty	= 10;
	eRTF_PlayerBlacklistedFromRegion	= 11;
}

enum AvailableStoreActions {
	StoreAction_ViewHomeTab	= 1;
	StoreAction_ViewHeroesTab	= 2;
	StoreAction_ViewCostumesTab	= 3;
	StoreAction_ViewItemsTab	= 4;
	StoreAction_ViewCardsTab	= 5;
	StoreAction_ViewSpecialsTab	= 6;
	StoreAction_ViewCostumesForHero	= 7;
	StoreAction_UserPressedBuy	= 8;
	StoreAction_UserPressedAddGs	= 9;
	StoreAction_StoreOpened	= 10;
	StoreAction_NumberOfStoreActions	= 11;
}

enum XDefenseWaveResults {
	XDefenseWaveResults_Success	= 1;
	XDefenseWaveResults_FailQuit	= 2;
	XDefenseWaveResults_FailPlayerWipe	= 3;
	XDefenseWaveResults_FailStudentDeath	= 4;
	XDefenseWaveResults_FailDeathTimeout	= 5;
	XDefenseWaveResults_NumberOfXDefenseWaveResults	= 6;
}

enum LegendaryMissionShareResultType {
	LegendaryMissionShare_Sent	= 1;
	LegendaryMissionShare_Accepted	= 2;
	LegendaryMissionShare_Declined	= 3;
	LegendaryMissionShare_RequestAlreadyPending	= 4;
	LegendaryMissionShare_FailPlayerNotFound	= 5;
	LegendaryMissionShare_FailNotEligible	= 6;
	LegendaryMissionShare_FailAlreadyHave	= 7;
	LegendaryMissionShare_FailCannotShareWithSelf	= 8;
	LegendaryMissionShare_FailCannotReShare	= 9;
	LegendaryMissionShare_UnknownFailure	= 10;
}

enum GroupType {
	GroupType_Invalid	= 0;
	GroupType_Party	= 1;
	GroupType_Raid	= 2;
}

enum CurrencyType {
	Currency_EternitySplinter	= 1;
	Currency_CubeShard	= 2;
	Currency_OdinMarks	= 3;
	Currency_Credits	= 4;
	CurrencySpend_NumberOfCurrencySpendTypes	= 5;
}

message NetStructPoint3 {
	optional float	X	= 1 [default = 0];
	optional float	Y	= 2 [default = 0];
	optional float	Z	= 3 [default = 0];
}

message NetStructIPoint3 {
	optional uint32	X	= 1 [default = 0];
	optional uint32	Y	= 2 [default = 0];
	optional uint32	Z	= 3 [default = 0];
}

message NetStructPoint2 {
	optional float	X	= 1 [default = 0];
	optional float	Y	= 2 [default = 0];
}

message NetStructIPoint2 {
	optional uint32	X	= 1 [default = 0];
	optional uint32	Y	= 2 [default = 0];
}

message NetStructProperty {
	required uint64	id	= 1;
	required uint64	value	= 2;
}

message NetStructPropertyList {
	repeated NetStructProperty	properties	= 1;
}

message NetStructLocomotionPathNode {
	required NetStructPoint3	vertex	= 1;
	required int32	vertexSideRadius	= 2;
}

message NetStructLocomotionState {
	optional uint32	locomotionflags	= 1;
	optional int32	method	= 2;
	optional float	movespeed	= 3;
	optional uint32	height	= 4;
	optional uint64	followentityid	= 5;
	optional float	followentityrange	= 6;
	required bool	updatepathnodes	= 7;
	repeated NetStructLocomotionPathNode	pathnodes	= 8;
	optional int32	pathgoalnodeindex	= 9;
}

message NetStructUniqueTransition {
	required uint64	regionId	= 1;
	required uint64	regionProtoId	= 2;
	required uint64	areaProtoId	= 3;
	required uint64	cellProtoId	= 4;
	optional uint64	entityProtoId	= 5;
}

message NetStructCreateRegionParams {
	required uint32	level	= 1;
	required uint64	difficultyModeId	= 2;
	optional NetStructUniqueTransition	originUniqueTransition	= 3;
	optional uint64	gameStateId	= 4;
	optional bool	levelIsOverride	= 5 [default = false];
	optional uint64	matchNumber	= 6 [default = 0];
	optional bool	cheat	= 7 [default = false];
}

message NetStructModChangeObject {
	required uint64	mod	= 1;
	required uint32	change	= 2;
}

message NetStructPowerPointAllocation {
	required uint64	powerProtoId	= 1;
	required uint32	delta	= 2;
}

message NetStructPortalInstance {
	required uint64	entityDbId	= 1;
	required NetStructRegionLocation	location	= 2;
	optional uint64	ownerPlayerDbId	= 3;
	optional bool	boundToOwner	= 4;
}

message NetStructRegionLocation {
	required uint64	regionId	= 1;
	required NetStructPoint3	position	= 2;
	optional uint64	regionPrototypeId	= 3;
	optional uint64	areaPrototypeId	= 4;
	optional uint64	cellPrototypeId	= 5;
}

message NetStructWarpDest {
	required uint64	DestRegionPrototypeId	= 1;
	optional uint64	DestRegionId	= 2;
	optional uint64	DestEntityDbId	= 3;
	optional NetStructPoint3	DestPosition	= 4;
	optional uint64	TransferId	= 5;
	optional uint64	DestAreaPrototypeId	= 6;
	optional uint64	DestRegionConnectionTargetPrototypeId	= 7;
	optional bool	UseStartTarget	= 8;
	optional int32	TeamIndex	= 9 [default = -1];
}

message NetStructAffixSpec {
	required uint64	affixProtoRef	= 1;
	required uint64	scopeProtoRef	= 2;
	required int32	seed	= 3;
}

message NetStructItemSpec {
	required uint64	itemProtoRef	= 1;
	required uint32	itemLevel	= 2;
	required uint64	rarityProtoRef	= 3;
	required uint32	seed	= 4;
	optional uint32	creditsAmount	= 5;
	repeated NetStructAffixSpec	affixSpecs	= 6;
	optional uint64	equippableBy	= 7;
}

message CommunityMemberBroadcast {
	required uint64	memberPlayerDbId	= 1;
	optional uint64	currentRegionRefId	= 2 [default = 123];
	optional uint64	currentAvatarRefId	= 3 [default = 123];
	optional uint64	currentCharacterLevel	= 4;
	optional uint64	currentPvpFactionRefId	= 5 [default = 123];
	optional uint64	currentDifficultyModeRefId	= 6 [default = 123];
	optional string	currentPlayerName	= 7;
	repeated uint64	memberPlayerDbIdIgnoreList	= 8;
	optional uint64	currentPrestigeLevel	= 9;
	optional int32	isOnline	= 10 [default = -1];
	optional int64	lastLogoutTimeAsFileTimeUtc	= 11;
}

message CommunityNotify {
	required uint64	targetPlayerDbId	= 1;
	required string	sourcePlayerName	= 2;
	required uint64	circleId	= 3;
	required ModifyCircleOperation	operation	= 4;
}

message NetStructLiveTuningSettingEnumValue {
	required int32	tuningVarEnum	= 1;
	required float	tuningVarValue	= 2;
}

message NetStructLiveTuningSettingProtoEnumValue {
	required uint64	tuningVarProtoId	= 1;
	required int32	tuningVarEnum	= 2;
	required float	tuningVarValue	= 3;
}

message ChangeRegionFailed {
	required RegionTransferFailure	reason	= 1;
	optional uint64	regionProtoId	= 2;
	optional uint64	requiredItemProtoId	= 3;
}

message NetStructChatChannelFilterState {
	required uint64	channelProtoId	= 1;
	required bool	isSubscribed	= 2;
}

message NetStructChatTabState {
	required uint64	channelProtoId	= 1;
}

message NetStructGameplayOptions {
	required bool	autoPartyEnabled	= 1;
	required bool	preferLowPopulationRegions	= 2;
	repeated NetStructChatChannelFilterState	chatChannelFiltersMap	= 3;
	required bool	disableHeroSynergyBonusXP	= 4;
	repeated NetStructChatTabState	chatTabChannelsArray	= 5;
}

message NetStructInventoryLocation {
	required uint64	invLocContainerEntityId	= 1;
	required uint64	invLocInventoryPrototypeId	= 2;
	required uint32	invLocSlot	= 3;
}

message ShareLegendaryMissionRequest {
	required uint64	missionDataRef	= 1;
}

message ShareLegendaryMissionResult {
	required uint64	missionDataRef	= 1;
	required LegendaryMissionShareResultType	result	= 2;
}

